--- a/gb/10/4/3/n2865381.md
+++ b/gb/10/4/3/n2865381.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dcvmnq377/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dcvmnq377/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dcvmnq377/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dcvmnq377/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dcvmnq377/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dcvmnq377/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dcvmnq377/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dcvmnq377/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dcvmnq377/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dcvmnq377/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dcvmnq377/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dcvmnq377/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dcvmnq377/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dcvmnq377/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dcvmnq377/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dcvmnq377/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/dcvmnq377/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/dcvmnq377/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/dcvmnq377/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/dcvmnq377/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dcvmnq377/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dcvmnq377/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dcvmnq377/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dcvmnq377/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台NCC修法　有线电视可跨区经营</h2>
 
 <h6></h6>
@@ -17,48 +17,46 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/10/3/24/n2855406.md#1">播立委扭打画面  NCC对电视台开罚</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/10/3/24/n2855477.md#1">社会新闻触法  6电视台遭罚</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/10/3/24/n2855546.md#1">台湾手机资费4/1降  用户年省逾700元</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/10/3/25/n2856040.md#1">台4月起手机费降5.87% 固网降4.816%</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/10/3/26/n2857465.md#1">洗肾人口多  NCC紧盯地下电台</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/10/3/31/n2861924.md#1">中正师生连署 要求中天同比例道歉</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/10/3/31/n2862552.md#1">壹电视电影台过关  另4台4月再审</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/10/3/31/n2862679.md#1">东森S关台二审逆转  NCC不用国赔</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/10/4/2/n2864744.md#1">NCC修法  打破第4台地盘</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/10/4/2/n2864836.md#1">台有线广电法修正 打破区域独占</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/3/24/n2855406.md#1">播立委扭打画面  NCC对电视台开罚</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/3/24/n2855477.md#1">社会新闻触法  6电视台遭罚</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/3/24/n2855546.md#1">台湾手机资费4/1降  用户年省逾700元</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/3/25/n2856040.md#1">台4月起手机费降5.87% 固网降4.816%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/3/26/n2857465.md#1">洗肾人口多  NCC紧盯地下电台</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/3/31/n2861924.md#1">中正师生连署 要求中天同比例道歉</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/3/31/n2862552.md#1">壹电视电影台过关  另4台4月再审</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/3/31/n2862679.md#1">东森S关台二审逆转  NCC不用国赔</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/2/n2864744.md#1">NCC修法  打破第4台地盘</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/2/n2864836.md#1">台有线广电法修正 打破区域独占</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/10/n10471335.md#1" target="_blank">《天安门杀戮》挖到六四事件的根</a></li><li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/15/n9040079.md#1" target="_blank">【细语人生】见证大法的神奇（5）</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/30/n10263600.md#1" target="_blank">共产暴政录：宣导暴力杀戮的彭湃</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/12/n10846893.md#1" target="_blank">律师依法为法轮功做无罪辩护 遭中共打压</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/4/n12665017.md#1">蓝色UFO出现在夏威夷夜空 随后俯冲入海</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/20/10/3/n12449907.md#1">《圣经》与《推背图》预言的应验与变换12</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/3/n12663595.md#1">屡遭YouTube删片 印度爆红占星师开设网站</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/4/n12665193.md#1">超逼真写实油画 描绘生活中的小小珍宝</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/20/12/27/n12647950.md#1">偶然的天意？康熙时钱币的预示</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/8/n12676724.md#1">【时事纵横】全球疫情凶猛 美官员访台中共开骂</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/8/n12676676.md#1">【有冇搞错】如何度过黑暗时代</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/9/n12676834.md#1">【横河直播】国会山暴力事件成大清洗借口？</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/6/n12671553.md#1">【更新】川普被噤声后首次放出视频发言</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/7/n12673072.md#1">老金鱼变黑濒死 爱心女买回呵护竟华丽变身</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/7/n12673189.md#1">国会认证拜登当选 川普承诺有序过渡</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/7/n12672836.md#1">陪同小甜甜登记结婚 王宇婕泛泪：好替她开心</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/7/n12673990.md#1">被农民大妈追问月薪 杨超越只敢抽象说两个字</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/6/n12671310.md#1">梁朝伟新片突遭撤档 传投资方涉金融爆雷</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/7/n12674191.md#1">陪朋友试镜 结果自己被选上出道的5位明星</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/8/n12676634.md#1">刘嘉玲自曝有洁癖 拍戏时曾换掉酒店房间马桶</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/7/n12672247.md#1">脂肪肝不是胖才有！每天做2件事 逆转脂肪肝</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/7/n12673448.md#1">“翠鸟对峙”精彩照 获英国摄影大赛冠军</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/7/n12672435.md#1">【重播】人体科学揭密：什么人容易染疫？</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/8/n12674814.md#1">【重播】全球确诊速升 除了口罩疫苗 自保这样做</a></li>
-<li><a href="https://github.com/dcvmnq377/djy/blob/master/gb/21/1/7/n12672192.md#1">冬令进补四神汤最养生 正确炖煮才有效</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752381.md#1">【菁英论坛】应付内外困局 中共攻台视政治需求</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751943.md#1">【新闻看点】特斯拉裁员10% 全球大衰退将至？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752419.md#1">专家：中共核检是干柴烈火 随时引爆疫情</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752937.md#1">林志玲47岁高龄当妈 写给儿子的话令人动容</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752955.md#1">金马影帝万梓良现身小商演 身体欠安需2人搀扶</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752111.md#1">避免旅行时多花冤枉钱 专家教你几招</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752361.md#1">减肥新进展 香港浸大研究发现减少饮食方法</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dcvmnq377/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dcvmnq377/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/4/3/n2865381.htm">台NCC修法　有线电视可跨区经营</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/4/3/n2865381.htm">台NCC修法　有线电视可跨区经营</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/dcvmnq377/djy/blob/master/gb/10/4/3/n2865381.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dcvmnq377/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dcvmnq377/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dcvmnq377/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dcvmnq377/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dcvmnq377/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/10/4/3/n2865381.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
